# mtaa-dao

./: .dockerignore  .env  .env.example  .env.local  .eslintrc.json  .gitignore  .replit  .shogun-rules.js  00_SIMULATOR_PROJECT_COMPLETION.md  AAVE_FLASH_LOANS_LIVE.md  ADMIN_API_ENDPOINTS_COMPLETE.md  ADMIN_AUTH_QUICK_NAVIGATION.md  ADMIN_AUTH_READY.md  ADMIN_AUTH_VERIFICATION_CHECKLIST.md  ADMIN_DASHBOARD_QUICK_START.md  ADMIN_INTEGRATION_SUMMARY.md  ADMIN_LOGIN_REGISTER_QUICK_START.md  ADMIN_LOGIN_REGISTER_TESTING.md  ADMIN_MONITORING_COMPLETE_PHASE_2.md  ADMIN_MONITORING_QUICK_REFERENCE.md  ADMIN_MONITORING_START_HERE.md  ADMIN_PERSISTENCE_QUICK_REFERENCE.md  ADMIN_SECURITY_HARDENING_COMPLETE.md  ADMIN_SYSTEM_COMPLETE.md  ADMIN_SYSTEM_COMPLETE_DOCUMENTATION_INDEX.md  ADMIN_SYSTEM_DEVELOPMENT_PLAN.md  ADMIN_SYSTEM_DOCUMENTATION_INDEX.md  ADMIN_SYSTEM_PHASE_2_COMPLETE.md  ADMIN_SYSTEM_PHASE_2_QUICK_START.md  ADMIN_SYSTEM_PHASE_3_API_REFERENCE.md  ADMIN_SYSTEM_PHASE_3_COMPLETE.md  ADMIN_SYSTEM_PHASE_3_DOCUMENTATION_INDEX.md  ADMIN_SYSTEM_PHASE_3_IMPLEMENTATION_SUMMARY.md  ADMIN_SYSTEM_PHASE_3_LAUNCH.md  ADMIN_SYSTEM_PHASE_3_STATUS.md  ADMIN_SYSTEM_PHASE_3_STATUS_SUMMARY.md  ADMIN_SYSTEM_PHASE_4_COMPLETE_SPECIFICATION.md  ADMIN_SYSTEM_PHASE_4_IMPLEMENTATION_SUMMARY.md  ADMIN_SYSTEM_PHASE_4_LAUNCH.md  ADMIN_SYSTEM_PHASE_5_1_COMPLETE.md  (+799 more)
mtaa-dao-whitepaper/: Cargo.toml  README.md  book.toml
mtaa-dao-whitepaper/src/: SUMMARY.md  conclusion.md  founders-letter.md  governance.md  impact.md  introduction.md  lib.rs  problem.md  risks.md  roadmap.md  solution.md  tokenomics.md  (+1 more)
(+3362 files in other folders)
